--- a/config.json
+++ b/config.json
@@ -7,6 +7,10 @@
   "cjy_password": "",
   "cjy_soft_id": "",
   "cjy_kind": 9101,
+  "tj_validation": false,
+  "tj_username": "",
+  "tj_password": "",
+  "tj_type_id": 19,
   "ws_conn_url": "ws://localhost:5201/subscribe",
   "ws_timeout": 60,
   "selenium_timeout": 30,
