1. 添加ios解决方案，先把手机用投屏方式投到电脑，然后ocr识别验证码并填入 2. 增加无效页面校验

--- a/config.json
+++ b/config.json
@@ -1,4 +1,9 @@
 {
+  "device": "",
+  "baidu_app_id": "",
+  "baidu_api_key": "",
+  "baidu_secret_key": "",
+  "baidu_range": [],
   "browserType": "Chrome",
   "headless": false,
   "binary": "",
