配置里添加百度OCR延迟时间设置，默认为5秒

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "baidu_api_key": "",
   "baidu_secret_key": "",
   "baidu_range": [],
+  "baidu_delay_time": 5,
   "browserType": "Chrome",
   "headless": false,
   "binary": "",
