--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
     "selenium_timeout": 30,
     "skip_shops": "",
     "phone_tail_number": "",
-    "mobile_cookie": "pt_key=AAJgmXzzADA3WUvXr8p96wzRitc-aGESykRjuH9eGoLODEPt03goT7Vq11eaJpwusIz2-lUsvDk;pt_pin=19925433-55171885;",
+    "mobile_cookie": "",
     "users": {
         
 }
