修正手动打码时报错 添加gitignore忽略pycharm产生的文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Pycharm
+__pycharm__
 .idea/*
 
 # venv
@@ -7,5 +8,5 @@ venv
 # drivers
 drivers/chromedriver
 
-# config.json.bak
+# config.json
 config.json.bak
