add free ocr -> easyocr

--- a/config.json
+++ b/config.json
@@ -24,5 +24,6 @@
   "phone_tail_number": "",
   "member_close_max_number": 0,
   "mobile_cookie": "",
-  "users": {}
+  "users": {},
+  "easy_ocr": true
 }
