--- a/config.json
+++ b/config.json
@@ -4,8 +4,7 @@
     "baidu_api_key": "",
     "baidu_secret_key": "",
     "baidu_range": [],
-    "baidu_delay_time": 1,
-    "first_time_delay_time": 5,
+    "ocr_delay_time": 5,
     "browserType": "Chrome",
     "headless": false,
     "binary": "",
