--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
   "baidu_app_id": "",
   "baidu_api_key": "",
   "baidu_secret_key": "",
-  "baidu_range": [],
-  "ocr_delay_time": 5,,
+  "baidu_range": [1904,634,2036,676],
+  "ocr_delay_time": 1,
   "first_time_delay_time": 5,
   "browserType": "Chrome",
   "headless": false,
