添加输入日志功能，修复获取每轮店铺列表与上轮是否因缓存一致判断bug

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,13 @@ venv
 # drivers
 drivers/chromedriver
 
-# config.json
-config.json.bak
+# config.yaml.bak
+config.yaml.bak
+
+# logs
+logs
+
+# others
+jd_wstool
+code_pic.png
+ios_code_pic.png
