--- a/config.yaml
+++ b/config.yaml
@@ -24,6 +24,7 @@ shop:
 
 # sms_captcha 短信验证码相关
 # sms_captcha.is_ocr: 是否开启OCR模式，IOS设备必须开启，安卓非必须
+# sms_captcha.jd_wstool: 是否调用jd_wstool工具监听验证码，默认为开启，如果不想开启，设置为false会调用内置websocket监听
 # sms_captcha.ws_conn_url: websocket链接地址，不用动
 # sms_captcha.ws_timeout: websocket接收验证码时间超时时间，超时会跳过当前店铺，进行下一个店铺，默认为60秒
 # sms_captcha.ocr.type: ocr的类型，可选：baidu、aliyun、easyocr
@@ -35,6 +36,7 @@ shop:
 # sms_captcha.ocr.aliyun_appcode: 阿里云通用文字识别应用的`AppCode`
 sms_captcha:
   is_ocr: false
+  jd_wstool: true
   ws_conn_url: "ws://localhost:5201/subscribe"
   ws_timeout: 60
   ocr:
