添加基于yolov4深度学习的验证码识别方式 (#74)
* 添加深度学习识别方式

* 优化代码，以及微调了配置，小幅提升识别率

--- a/config.yaml
+++ b/config.yaml
@@ -49,7 +49,7 @@ sms_captcha:
     aliyun_appcode: ""
 
 # image_captcha 图形验证码相关
-# image_captcha.type: 图形验证码类型，可选：local、cjy、tj
+# image_captcha.type: 图形验证码类型，可选：local、cjy、tj、yolov4
 # image_captcha.cjy_username: 超级鹰账号，仅在 image_captcha.type 为 cjy 时需要设置
 # image_captcha.cjy_password: 超级鹰密码，仅在 image_captcha.type 为 cjy 时需要设置
 # image_captcha.cjy_soft_id: 超级鹰软件ID，仅在 image_captcha.type 为 cjy 时需要设置
@@ -57,6 +57,9 @@ sms_captcha:
 # image_captcha.tj_username: 图鉴账号，仅在 image_captcha.type 为 tj 时需要设置
 # image_captcha.tj_password: 图鉴密码，仅在 image_captcha.type 为 tj 时需要设置
 # image_captcha.tj_type_id: 图鉴验证码类型，仅在 image_captcha.type 为 tj 时需要设置，且该项目指定为 19
+# yolov4_weights: yolov4权重文件路径，仅在 image_captcha.type 为 yolov4 时需要设置
+# yolov4_cfg: yolov4配置文件路径，仅在 image_captcha.type 为 yolov4 时需要设置
+# CUDA: 尝试使用CUDA加速，据说速度可提升几倍到几十倍，需要编译安装opencv，仅在 image_captcha.type 为 yolov4 时需要设置
 image_captcha:
   type: "local"
   cjy_username: ""
@@ -66,6 +69,9 @@ image_captcha:
   tj_username: ""
   tj_password: ""
   tj_type_id: 19
+  yolov4_weights: "yolov4/yolov4-custom.weights"
+  yolov4_cfg: "yolov4/yolov4-custom.cfg"
+  CUDA: false
 
 # user-agent 用户代理，可自行配置
 user-agent:
