--- a/config.yaml
+++ b/config.yaml
@@ -59,9 +59,9 @@ sms_captcha:
 # image_captcha.tj_type_id: 图鉴验证码类型，仅在 image_captcha.type 为 tj 时需要设置，且该项目指定为 19
 # yolov4_weights: yolov4权重文件路径，仅在 image_captcha.type 为 yolov4 时需要设置
 # yolov4_cfg: yolov4配置文件路径，仅在 image_captcha.type 为 yolov4 时需要设置
-# CUDA: 尝试使用CUDA加速，据说速度可提升几倍到几十倍，需要编译安装opencv，仅在 image_captcha.type 为 yolov4 时需要设置
+# yolov4_net_size: yolov4网络size，仅在 image_captcha.type 为 yolov4 时需要设置
 image_captcha:
-  type: "local"
+  type: "yolov4"
   cjy_username: ""
   cjy_password: ""
   cjy_soft_id: ""
@@ -69,9 +69,9 @@ image_captcha:
   tj_username: ""
   tj_password: ""
   tj_type_id: 19
-  yolov4_weights: "yolov4/yolov4-custom.weights"
-  yolov4_cfg: "yolov4/yolov4-custom.cfg"
-  CUDA: false
+  yolov4_weights: "yolov4/yolov4-tiny-custom.weights"
+  yolov4_cfg: "yolov4/yolov4-tiny-custom.cfg"
+  yolov4_net_size: 512
 
 # user-agent 用户代理，可自行配置
 user-agent:
