--- a/config.yaml
+++ b/config.yaml
@@ -21,12 +21,14 @@ selenium:
 # shop.phone_tail_number: 手机后4位尾号，若填写将会校验店铺尾号是否是规定的，不符合就跳过，支持多手机号，格式为["0123","1234"]
 # shop.member_close_max_number: 设置本次运行注销的最大店铺数，默认为0，代表不限制
 # shop.wait_refresh_time: 乱码店铺挂载时间，默认为挂31分钟，可自行调整
+# shop.cloud_shopid: 是否启用远程店铺id进行退会，默认关闭 开启:true 关闭:false   请使用最新的短信识别宏，否则有概率识别不到
 shop:
   skip_shops: []
   specify_shops: []
   phone_tail_number: []
   member_close_max_number: 0
   wait_refresh_time: 31
+  cloud_shopid: true
 
 # sms_captcha 短信验证码相关
 # sms_captcha.is_ocr: 是否开启OCR模式，IOS设备必须开启，安卓非必须
