补充执行远程店铺数据开关配置

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -21,12 +21,14 @@ selenium:
 # shop.phone_tail_number: 手机后4位尾号，若填写将会校验店铺尾号是否是规定的，不符合就跳过，支持多手机号，格式为["0123","1234"]
 # shop.member_close_max_number: 设置本次运行注销的最大店铺数，默认为0，代表不限制
 # shop.wait_refresh_time: 乱码店铺挂载时间，默认为挂31分钟，可自行调整
+# shop.add_remote_shop_data: 添加远端店铺数据，默认开启，如需关闭请设置为false，该设置需要更新至最新的macrodroid配置
 shop:
   skip_shops: []
   specify_shops: []
   phone_tail_number: []
   member_close_max_number: 0
   wait_refresh_time: 31
+  add_remote_shop_data: true
 
 # sms_captcha 短信验证码相关
 # sms_captcha.is_ocr: 是否开启OCR模式，IOS设备必须开启，安卓非必须
