--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,10 +1,10 @@
-name: Gitee repos mirror periodic job
+name: Write project version
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
 
 jobs:
   build:
