--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -24,7 +24,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git diff --quiet && git diff --staged --quiet || git commit -am 'avoid being suspended'
+        git diff --quiet && git diff --staged --quiet || git commit -am 'Automatically write version information'
         echo ::set-output name=status::success
 
     - name: 'GitHub push'
