--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,33 @@
 cookie: ""
 debug: false
 
+
+# 主要参数配置
+# main.auto: 定时自动退会开关，开启时设置为true，关闭为false
+# main.cron: 定时时间设置，按 "分 时 日 月 年" 设置，13 10 */2 * * 表示每2天10时13分启动退会
+main:
+  smsport: "5201"
+  cron_enable: true
+  cron: "30 9 * * *"
+
+
+# 多账号同退相关
+# multi.multi: 多账号同退开关，开启的话，必须设置sms_captcha.jd_wstool=false
+# multi.type: 账号的类型，是"cookie"还是"wskey"，请对应设置即可
+# multi.keyX: 一个key参数对应一个port参数，若multi.type设置为"cookie"，请填写cookie；若设置为"wskey"，请填写wskey；
+#             一个端口对应多个账号请使用&隔开： [wsk1]&[wsk2]&[wsk3]
+# multi.portX: 对应wskeyX或cookieX使用的端口号，
+multi:
+  multi_enable: true
+  key1: ""
+  port1: 5211
+  key2: ""
+  port2: 5212
+  key3: ""
+  port3: 5213
+  key4: ""
+  port4: 5214
+
 # selenium 相关
 # selenium.browserType: 浏览器类型
 # selenium.headless: 无头模式，建议默认设置
@@ -10,7 +37,7 @@ debug: false
 # selenium.check_wait: selenium操作发送验证码和校验是否成功注销的等待时间，目的是跳过黑店，默认3秒
 selenium:
   browserType: "Chrome"
-  headless: false
+  headless: true
   binary: ""
   timeout: 30
   check_wait: 3
@@ -46,7 +73,7 @@ shop:
 # sms_captcha.ocr.aliyun_appcode: 阿里云通用文字识别应用的`AppCode`
 sms_captcha:
   is_ocr: false
-  jd_wstool: true
+  jd_wstool: false
   ws_conn_url: "ws://localhost:5201/subscribe"
   ws_timeout: 60
   ocr:
