--- a/config.yaml
+++ b/config.yaml
@@ -88,7 +88,7 @@ sms_captcha:
     aliyun_appcode: ""
 
 # image_captcha 图形验证码相关
-# image_captcha.type: 图形验证码类型，可选：local、cjy、tj、yolov4
+# image_captcha.type: 图形验证码类型，可选：local、cjy、tj、yolov4、manual（manual为手动验证）
 # image_captcha.cjy_username: 超级鹰账号，仅在 image_captcha.type 为 cjy 时需要设置
 # image_captcha.cjy_password: 超级鹰密码，仅在 image_captcha.type 为 cjy 时需要设置
 # image_captcha.cjy_soft_id: 超级鹰软件ID，仅在 image_captcha.type 为 cjy 时需要设置
@@ -100,7 +100,7 @@ sms_captcha:
 # yolov4_cfg: yolov4配置文件路径，仅在 image_captcha.type 为 yolov4 时需要设置
 # yolov4_net_size: yolov4网络size，仅在 image_captcha.type 为 yolov4 时需要设置
 image_captcha:
-  type: "yolov4"
+  type: "manual"
   cjy_username: ""
   cjy_password: ""
   cjy_soft_id: ""
